--- a/with-tailwindcss-app/package.json
+++ b/with-tailwindcss-app/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "next": "latest",
+    "pg": "^8.6.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^7.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
